styles.css
body {
	margin: 0px 0px 20px 0px;
	border: 0;
	padding: 0;
		background-color: #FFFFFF;
	
        	text-align: center;
        
	}

a {
	text-decoration: underline;
	
	font-weight: bold;
	}

a:link {
	color: #006699;
	}

a:visited {
	color: #999999;
	}

a:active {
	color: #cc0000;
	}

a:hover {
	color: #666666;
	}

a:link img {
	border-color: #006699;
	}
a:visited img {
	border-color: #999999;
	}
a:hover img {
	border-color: #666666;
	}
a:active img {
	border-color: #cc0000;
	}

h1, h2, h3 {
	margin: 0px;
	padding: 0px;
	font-weight: normal;
	}

#container {
	line-height: 140%;
		margin-right: auto;
	margin-left: auto;
	text-align: left;
	padding: 0px;
	width: 700px;
	
	background-color: #FFFFFF;
	border: 1px solid #000000;
	}

#banner {
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	color: #FFFFFF;
	background-color: #BBBBBB;
	text-align: center;
	padding: 15px;
	border: 0;
	}

#banner-img {
	display: none;
	}



#banner a {
	color: #FFFFFF;
	text-decoration: none;
	}

#banner h1 {
	font-size: xx-large;
	font-weight: bold;
	font-style: italic;
	
	}

#banner h2 {
	font-size: small;
	}



#center {
		float: left;
	width: 500px;
	overflow: hidden;
	
	
	}

.content {
	padding: 15px 15px 5px 15px;
	background-color: #FFFFFF;
	border: 0;
	color: #000000;
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: small;
	}

textarea#comment-text {
	width: 80%;
	}


#right {
		float: left;
	
	
	width: 200px;
	background-color: #FFFFFF;
	border: 0;
	overflow: hidden;
	}

.content p {
	color: #000000;
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: small;
	font-weight: normal;
	line-height: 150%;
	text-align: left;
	margin-bottom: 10px;
	}

.content blockquote {
	line-height: 150%;
	}

.content li {
	line-height: 150%;
	}

.content h2 {
	color: #999999;
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: x-small;
	border-left: 1px solid #666666;
	text-align: left;
	font-weight: bold;
	
	
	margin-bottom: 10px;
	padding: 3px;
	}

.content h3 {
	color: #666666;
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: large;
	border-left: 1px solid #666666;
	text-align: left;
	font-weight: bold;
	
	
	margin-bottom: 10px;
	padding: 3px;
	}

.content p.posted {
	clear: both;
	color: #000000;
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: x-small;
	border: 0;
	text-align: right;
	
	font-style: italic;
	
	margin-bottom: 25px;
	line-height: normal;
	
	}

.sidebar {
	padding: 15px;
	}



#calendar {
  	line-height: 140%;
	color: #000000;
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: x-small;
	
	
	
  	padding: 2px;
	text-align: center;
	margin-bottom: 30px;
	}

#calendar table {
	padding: 2px;
	border-collapse: collapse;
	border: 0px;
	width: 100%;
	}

#calendar caption {
	color: #000000;
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: x-small;
	border: 1px solid #000000;
	text-align: left;
	font-weight: bold;
	
	
	padding: 3px;
	letter-spacing: .3em;
	}

#calendar th {
	text-align: center;
	font-weight: normal;
	}

#calendar td {
	text-align: center;
	}

.sidebar h2 {
	color: #000000;
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: x-small;
	border: 1px solid #000000;
	text-align: left;
	font-weight: bold;
	
	
  	padding: 3px;
	letter-spacing: .3em;
	}

.sidebar ul {
	padding-left: 0px;
	margin: 0px;
	margin-bottom: 30px;
	}

.sidebar li {
	color: #000000;
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: x-small;
	text-align: left;
	line-height: 150%;
	
	
	
	margin-top: 10px;
	list-style-type: none;
	}

.sidebar img {
	border: 1px solid #000000;
	}

#photo {
	text-align: center;
	margin-bottom: 20px;
	}

.link-note {
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: x-small;
	line-height: 150%;
	text-align: left;
	padding: 2px;
	margin-bottom: 15px;
	}

#powered {
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: x-small;
	line-height: 150%;
	text-align: left;
	color: #000000;
	margin-top: 50px;
	}

#comment-data {
	float: left;
	width: 180px;
	padding-right: 15px;
	margin-right: 15px;
	text-align: left;
	border-right: 1px dotted #BBB;
	}

textarea[id="comment-text"] {
	width: 80%;
	}

.image-full {
		width: 470px;
	
	
	}

.image-thumbnail {
	float: left;
	width: 130px;
	margin-bottom: 10px;
	}

.image-thumbnail img {
	width: 115px;
	height: 115px;
	}

.module-qrcode {
	font-family: 'MS PGothic', 'Hiragino Kaku Gothic Pro W3', Osaka, sans-serif;
	font-size: x-small;
	line-height: 150%;
	text-align: center;
}

.content h3 a {
	text-decoration: none;
}

.content h3 a:link {
	color: #666666;
}

.content h3 a:visited {
	color: #666666;
}

.content h3 a:hover {
	color: #666666;
}

.content h3 a:active {
	color: #666666;
}

/* user css */


.adsense { clear:both; } 

